<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/influenza_result_tv"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/influenza_tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#ffa81e"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/influenza"
            android:textColor="#000000"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />

        <TextView
            android:id="@+id/influenza_tv2"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/intro1"
            android:textColor="#000000"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/influenza_checkbox_fever"
            android:layout_width="362dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/fever"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />


        <CheckBox
            android:id="@+id/influenza_checkbox_cough"
            android:layout_width="363dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cough"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/influenza_checkbox_vomit"
            android:layout_width="363dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/vomitting"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/influenza_checkbox_runnynose"
            android:layout_width="363dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/runnynose"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/influenza_checkbox_headache"
            android:layout_width="362dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/headache"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/influenza_checkbox_fatigue"
            android:layout_width="362dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/fatigue"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/influenza_checkbox_throatache"
            android:layout_width="361dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/throatache"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />



        <!--<CheckBox
            android:id="@+id/influenza_checkbox_medicalcond"
            android:layout_width="361dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/medicalcond"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />-->







        <CheckBox
            android:id="@+id/influenza_checkbox_myalgia"
            android:layout_width="361dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/myalgia"
            android:textSize="20sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />


        <Button
            android:id="@+id/influenzabtn"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="10dp"
            android:background="#ffa81e"
            android:fontFamily="sans-serif-medium"
            android:text="@string/submit"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/influenza_result_tv1"
            android:layout_width="358dp"
            android:layout_height="44dp"
            android:padding="2dp"
            android:textColor="#000000"
            android:textSize="20sp" />



    </LinearLayout>
</ScrollView>
