<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/covid_tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#ffa81e"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/covid"
            android:textColor="#000000"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />

        <TextView
            android:id="@+id/covid_tv2"
            android:layout_width="wrap_content"
            android:layout_height="103dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/intro1"
            android:textColor="#000000"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/covid_CB_fever"
            android:layout_width="362dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/fever"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/covid_CB_drycough"
            android:layout_width="363dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/dry_cough"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/covid_CB_sorethroat"
            android:layout_width="363dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sore_throat"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/covid_CB_runnynose"
            android:layout_width="363dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/runnynose"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/covid_CB_headache"
            android:layout_width="362dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/headache"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/covid_CB_fatigue"
            android:layout_width="362dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/fatigue"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/covid_CB_breathingproblem"
            android:layout_width="361dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/breathing_problem"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <!--<CheckBox
            android:id="@+id/covid_CB_lungdisease"
            android:layout_width="361dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/chronic_lung_disease"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />-->

        <!--<CheckBox
            android:id="@+id/covid_CB_heartdisease"
            android:layout_width="361dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/any_heart_disease"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />-->

        <!--<CheckBox
            android:id="@+id/covid_CB_diabetes"
            android:layout_width="361dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/diabetes"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/covid_CB_hypertension"
            android:layout_width="361dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/hypertension"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />-->

        <CheckBox
            android:id="@+id/covid_CB_stomachache"
            android:layout_width="361dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/any_kind_of_stomach_ache"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <TextView
            android:id="@+id/questions_tv"
            android:layout_width="351dp"
            android:layout_height="94dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-medium"
            android:padding="10dp"
            android:text="@string/answer_the_following_questions"
            android:textColor="#000000"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/covid_CB_travelabroad"
            android:layout_width="361dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/travelled_abroad"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/covid_CB_contactCovidpatient"
            android:layout_width="361dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/contacted_covid_patient"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/covid_CB_largegathering"
            android:layout_width="361dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/attended_any_large_gathering"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/covid_CB_visitpublicplace"
            android:layout_width="361dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/visited_public_places"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <CheckBox
            android:id="@+id/covid_CB_family"
            android:layout_width="361dp"
            android:layout_height="72dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/family_member_contact_traced"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="3dp"
            android:background="#ffa81e" />

        <Button
            android:id="@+id/covidbtn"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="10dp"
            android:background="#ffa81e"
            android:fontFamily="sans-serif-medium"
            android:text="@string/submit"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/covid_result_tv"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>
</ScrollView>
